tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamedImportDts1.errors.txt
tests/cases/compiler/client.ts(3,1): message TS6149: Did you mean to import the default export, with no curly braces
tests/cases/compiler/client.ts(3,27): error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'a'.
tests/cases/compiler/client.ts(5,1): message TS6149: Did you mean to import the default export, with no curly braces
tests/cases/compiler/client.ts(5,27): error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'a'.
tests/cases/compiler/client.ts(7,1): message TS6149: Did you mean to import the default export, with no curly braces
tests/cases/compiler/client.ts(7,27): error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'x'.
tests/cases/compiler/client.ts(7,30): error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'a'.
tests/cases/compiler/client.ts(9,1): message TS6149: Did you mean to import the default export, with no curly braces
tests/cases/compiler/client.ts(9,27): error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'x'.
tests/cases/compiler/client.ts(11,1): message TS6149: Did you mean to import the default export, with no curly braces
tests/cases/compiler/client.ts(11,27): error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'm'.


==== tests/cases/compiler/server.ts (0 errors) ====
    
    class a { }
    export default a;
    
==== tests/cases/compiler/client.ts (11 errors) ====
    import defaultBinding1, { } from "./server";
    export var x1 = new defaultBinding1();
    import defaultBinding2, { a } from "./server";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! message TS6149: Did you mean to import the default export, with no curly braces
                              ~
!!! error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'a'.
    export var x2 = new defaultBinding2();
    import defaultBinding3, { a as b } from "./server";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! message TS6149: Did you mean to import the default export, with no curly braces
                              ~
!!! error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'a'.
    export var x3 = new defaultBinding3();
    import defaultBinding4, { x, a as y } from "./server";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! message TS6149: Did you mean to import the default export, with no curly braces
                              ~
!!! error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'x'.
                                 ~
!!! error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'a'.
    export var x4 = new defaultBinding4();
    import defaultBinding5, { x as z,  } from "./server";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! message TS6149: Did you mean to import the default export, with no curly braces
                              ~
!!! error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'x'.
    export var x5 = new defaultBinding5();
    import defaultBinding6, { m,  } from "./server";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! message TS6149: Did you mean to import the default export, with no curly braces
                              ~
!!! error TS2305: Module '"tests/cases/compiler/server"' has no exported member 'm'.
    export var x6 = new defaultBinding6();